# Everything2Doc

./: .env.example  .gitignore  PRD.md  README.md  package.json  pyproject.toml  requirements.txt  test_processing.sh  任务拆分.md  设计需求文档.md
backend/: Dockerfile  fly.toml  main.py  package_config.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: e942c33dfdd7_update_project_table_with_user_id.py
backend/app/: crud.py
backend/app/api/: deps.py
backend/app/api/routers/: __init__.py  chat.py  documents.py  login.py  projects.py  users.py
backend/app/core/: config.py  db.py
backend/app/db/: database.py  init_db.py  models.py
backend/app/libs/core/: gen_structure.py  worker.py
backend/app/libs/preprocessing/: reader.py  split.py
backend/app/libs/prompt/: prompt.py
backend/app/libs/utils/: ai_chat_client.py
backend/app/models/: project.py  schemas.py  user.py
backend/app/services/: document_service.py  project_service.py
backend/app/utils/: file_handler.py  stream_handler.py
backend/scripts/: clear_database.py
docs/: project-structure.txt  structure.md  设计需求文档.md
examples/: test_llama.py
examples/yucun/: example.py  recom_test.py
frontend/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page-old.tsx  page.tsx
frontend/src/components/: ai-panel.tsx  document-phraser.tsx  markdown-beautifier.tsx
frontend/src/hooks/: use-auth.ts  use-project-data.ts
frontend/src/lib/: api.ts  auth.ts  chat-parser.ts  openrouterService.ts  prompt.tsx
frontend/src/stores/: project.ts
frontend/src/styles/: timeline.css
frontend/src/types/: type-cards.ts  workspace.ts
server/: .dockerignore  Dockerfile  app.db  config.py  fly.toml  init_db.py  requirements.txt  run.py  test_document_flow.py
server/app/: __init__.py
server/app/api/: routers.py
server/app/models/: model.py
server/app/services/: cards_service.py  document_service.py  project_service.py
server/app/tasks/: process_segment.py
server/app/utils/: file_handler.py  stream_handler.py
src/everything2doc/: __init__.py
src/everything2doc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/everything2doc/core/: __init__.py  gen_structure.py  worker.py
src/everything2doc/preprocessing/: __init__.py  reader.py  split.py
src/everything2doc/prompt/: __init__.py  prompt.py
src/everything2doc/utils/: __init__.py  agent.py  ai_chat_client.py  (+1 more)
tests/: test_doc_generation.py
web/: pnpm-lock.yaml  tailwind.config.ts
(+72 files in other folders)
